--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,6 @@
 [user]
 	name  = Pablo Cárdenas
 	email = pablo-cardenas@outlook.com
+[alias]
+	lod = log --oneline --decorate
+	unstage = reset HEAD --
