--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -2,7 +2,10 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:xos4 Terminus 12px
+font:pango Fira Mono 10
+
+# Start polybar
+exec_always --no-startup-id $HOME/.config/polybar/polybar.sh
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -14,7 +17,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -i -fn 'xos4 Terminus:pixelsize=12'
+bindsym $mod+d exec dmenu_run -fn 'Fira Mono-10' -nb '#282828' -nf '#ebdbb2' -sb '#98971a' -sf '#282828' -i -p ' RUN '
 
 # change focus
 bindsym $mod+j focus left
@@ -127,9 +130,23 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+#bar {
+#        status_command i3status
+#        colors {
+#                background #002b36
+#                statusline #839496
+#                separator  #586e75
+#                focused_workspace  #b58900 #b58900 #002b36
+#                active_workspace   #586e75 #586e75 #002b36
+#                inactive_workspace #073642 #002b36 #839496
+#                urgent_workspace   #dc322f #dc322f #fdf6e3
+#        }
+#}
+
+client.focused          #002b36 #586e75 #fdf6e3 #268bd2
+client.focused_inactive #002b36 #073642 #839496 #073642
+client.unfocused        #002b36 #073642 #839496 #073642
+client.urgent           #002b36 #dc322f #fdf6e3 #002b36
 
 
 #Alsa key bindings
@@ -146,3 +163,9 @@ bindsym XF86AudioPrev exec playerctl previous
 #Brightness key bindings
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5
+
+new_window pixel 2
+new_float pixel 2
+gaps inner 8
+gaps outer 8
+smart_gaps on
