--- a/home/.octaverc
+++ b/home/.octaverc
@@ -1,6 +1,6 @@
 edit mode sync
 edit home .
-EDITOR('vim > /dev/tty 2>&1 < /dev/tty %s')
+EDITOR('nvim > /dev/tty 2>&1 < /dev/tty %s')
 
 % Para clases
-PS1 ("octave> ")
+% PS1 ("octave> ")
