--- a/linux/.config/i3/config
+++ b/linux/.config/i3/config
@@ -1,19 +1,23 @@
-set_from_resource $base00 color0  #000000
-set_from_resource $base01 color10 #000000
-set_from_resource $base02 color11 #000000
-set_from_resource $base03 color8  #000000
-set_from_resource $base04 color12 #000000
-set_from_resource $base05 color7  #000000
-set_from_resource $base06 color13 #000000
-set_from_resource $base07 color15 #000000
-set_from_resource $base08 color1  #000000
-set_from_resource $base09 color9  #000000
-set_from_resource $base0A color3  #000000
-set_from_resource $base0B color2  #000000
-set_from_resource $base0C color6  #000000
-set_from_resource $base0D color4  #000000
-set_from_resource $base0E color5  #000000
-set_from_resource $base0F color14 #000000
+set_from_resource $black    color0  #000000
+set_from_resource $red3     color1  #cd0000
+set_from_resource $green3   color2  #00cd00
+set_from_resource $yellow3  color3  #cdcd00
+set_from_resource $blue3    color4  #0000cd
+set_from_resource $magenta3 color5  #cd00cd
+set_from_resource $cyan3    color6  #00cdcd
+set_from_resource $gray90   color7  #e5e5e5
+set_from_resource $gray30   color8  #4d4d4d
+set_from_resource $red      color9  #ff0000
+set_from_resource $green    color10 #00ff00
+set_from_resource $yellow   color11 #ffff00
+set_from_resource $blue     color12 #0000ff
+set_from_resource $magenta  color13 #ff00ff
+set_from_resource $cyan     color14 #00ffff
+set_from_resource $white    color15 #ffffff
+set_from_resource $fg0 i3wm.fg0 #000000
+set_from_resource $fg1 i3wm.fg1 #4d4d4d
+set_from_resource $bg0 i3wm.bg0 #ffffff
+set_from_resource $bg1 i3wm.bg1 #e5e5e5
 
 set $mod Mod4
 
@@ -33,8 +37,11 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -fn 'Fira Mono-9' -nb '$base01' -nf '$base03' -sb '$base02' -sf '$base01' -i -p ' RUN '
+# start rofi (a program launcher)
+bindsym $mod+d exec --no-startup-id "rofi -show run"
+bindsym $mod+Shift+d exec --no-startup-id "rofi -show drun"
+bindsym $mod+n exec --no-startup-id "rofi -show window"
+bindsym $mod+p exec --no-startup-id "rofi -show window"
 
 # change focus
 bindsym $mod+j focus left
@@ -55,12 +62,6 @@ bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 bindsym $mod+Shift+ntilde move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+h split h
@@ -114,10 +115,13 @@ bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -132,12 +136,6 @@ mode "resize" {
         bindsym semicolon resize grow width 10 px or 10 ppt
         bindsym ntilde resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -145,25 +143,22 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Property Name         Border  BG      Text    Indicator Child Border
-client.focused          $base05 $base0D $base00 $base0D $base0D
-client.focused_inactive $base01 $base01 $base05 $base03 $base01
-client.unfocused        $base01 $base00 $base05 $base01 $base01
-client.urgent           $base08 $base08 $base00 $base08 $base08
-client.placeholder      $base00 $base00 $base05 $base00 $base00
-client.background       $base07
+# class                 border  backgr. text    indicator child_border
+client.focused          $fg0    $bg0    $fg0    $green    $fg0
+client.focused_inactive $bg1    $bg0    $fg1    $green    $bg1
+client.unfocused        $bg1    $bg0    $bg1    $green    $bg1
+client.urgent           $red    $bg0    $red    $green    $red
+client.placeholder      $000000 $blue   $blue   $000000   $blue
+client.background       $magenta
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +10% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -10% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 
-# Sreen brightness controls
+# Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightness
-
-# Touchpad controls
-bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play
@@ -173,5 +168,6 @@ bindsym XF86AudioPrev exec playerctl previous
 
 new_window pixel 2
 new_float pixel 2
+gaps vertical 6
+gaps horizontal 43
 gaps inner 8
-gaps outer 8
