--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,3 +1,3 @@
-#set -g default-terminal tmux-256color  # Use 256 colors
+set -g default-terminal tmux-256color  # Use 256 colors
 set -g history-limit 100000            # Scrollback buffer number of lines
 set -s escape-time 0
