--- a/linux/.config/picom/picom.conf
+++ b/linux/.config/picom/picom.conf
@@ -5,13 +5,15 @@ shadow-offset-y = -10;
 shadow-radius = 10;
 
 shadow-exclude = [
+  "! name~=''",
+  "class_g = 'Osdlyrics'",
   "class_g = 'i3-frame'",
   "class_g = 'zoom'",
   "name = 'cpt_frame_window'"
 ]
 
 opacity-rule = [
-  "95:class_g = 'URxvt' && focused",
+  "90:class_g = 'URxvt' && focused",
   "60:class_g = 'URxvt' && !focused",
   "70:class_g = 'Zathura' && !focused",
 ];
