--- a/home/.editorconfig
+++ b/home/.editorconfig
@@ -6,7 +6,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{c,cpp,h,hpp,cc,java,bash,sh}]
+[*.{c,cpp,h,hpp,cc,java}]
 indent_style = tab
 tab_width = 4
 max_line_length = 79
