--- a/linux/.config/picom/picom.conf
+++ b/linux/.config/picom/picom.conf
@@ -1,19 +1,58 @@
-shadow = true;
+#backend = "glx"
+#glx-copy-from-front = false;
+#vsync = true
 
-shadow-offset-x = -10;
-shadow-offset-y = -10;
-shadow-radius = 10;
+shadow = true;
+shadow-offset-x = -25;
+shadow-offset-y = -25;
+shadow-radius = 25;
+shadow-opacity = 1.0
+shadow-red = 0.0
+shadow-green = 0.0
+shadow-blue = 0.0
 
 shadow-exclude = [
   "! name~=''",
   "class_g = 'Osdlyrics'",
   "class_g = 'i3-frame'",
   "class_g = 'zoom'",
-  "name = 'cpt_frame_window'"
-]
-
-opacity-rule = [
-  "90:class_g = 'URxvt' && focused",
-  "60:class_g = 'URxvt' && !focused",
-  "70:class_g = 'Zathura' && !focused",
+  "name = 'cpt_frame_window'",
+  "!focused",
+  "bounding_shaped && !rounded_corners",
 ];
+
+
+fading = true;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
+fade-delta = 0.01;
+
+
+
+#active-opacity = 1.0;
+inactive-opacity = 0.95;
+frame-opacity = 0.8;
+inactive-opacity-override = false;
+opacity-rule = [
+  "95:class_g = 'URxvt' && focused",
+  "70:class_g = 'URxvt' && !focused",
+  "90:class_g = 'Zathura' && !focused",
+  "60:class_g *?= 'Rofi'",
+];
+inactive-dim = 0.05;
+
+# I need a better graphic card to do this
+#blur: {
+#	method = "gaussian";
+#	size = 10;
+#	deviation = 5.0;
+#}
+
+wintypes:
+{
+  tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true; full-shadow = false; };
+  dock = { shadow = false; }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 0.9; }
+  dropdown_menu = { opacity = 0.9; }
+};
