--- a/home/.editorconfig
+++ b/home/.editorconfig
@@ -6,7 +6,12 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{c,cpp,h,hpp,cc,java}]
+[*.{cc,cpp,hpp,cxx}]
+indent_style = space
+indent_size = 4
+max_line_length = 79
+
+[*.{c,h,java}]
 indent_style = tab
 tab_width = 4
 max_line_length = 79
@@ -14,7 +19,6 @@ max_line_length = 79
 [*.{py,R}]
 indent_style = space
 indent_size = 4
-max_line_length = 79
 
 [Makefile]
 indent_style = tab
@@ -23,7 +27,12 @@ indent_style = tab
 indent_style = tab
 tabwidth = 4
 
-[*.{html,css,js,jsx,ts,tsx,xml,inpx}]
+[*.md]
+indent_style = space
+indent_size = 4
+max_line_length = 79
+
+[*.{html,css,scss,js,jsx,ts,tsx,xml,inpx}]
 indent_style = space
 indent_size = 2
 
