--- a/home/.octaverc
+++ b/home/.octaverc
@@ -1,6 +1,3 @@
 edit mode sync
 edit home .
-EDITOR('nvim > /dev/tty 2>&1 < /dev/tty %s')
-
-% Para clases
-% PS1 ("octave> ")
+EDITOR('vim > /dev/tty 2>&1 < /dev/tty %s')
