--- a/linux/.config/picom/picom.conf
+++ b/linux/.config/picom/picom.conf
@@ -1,6 +1,8 @@
-#backend = "glx"
-#glx-copy-from-front = false;
-#vsync = true
+backend = "glx";
+glx-copy-from-front = false;
+xrender-sync-fence = true;
+vsync = true;
+
 
 shadow = true;
 shadow-offset-x = -25;
@@ -15,10 +17,9 @@ shadow-exclude = [
   "! name~=''",
   "class_g = 'Osdlyrics'",
   "class_g = 'i3-frame'",
-  "class_g = 'zoom'",
-  "name = 'cpt_frame_window'",
-  "!focused",
+  "class_g = 'zoom' && name = 'as_toolbar'",
   "bounding_shaped && !rounded_corners",
+  "name = 'cpt_frame_window'",
 ];
 
 
@@ -28,25 +29,28 @@ fade-out-step = 0.03;
 fade-delta = 0.01;
 
 
-
-#active-opacity = 1.0;
-inactive-opacity = 0.95;
 frame-opacity = 0.8;
 inactive-opacity-override = false;
 opacity-rule = [
   "95:class_g = 'URxvt' && focused",
-  "70:class_g = 'URxvt' && !focused",
-  "90:class_g = 'Zathura' && !focused",
-  "60:class_g *?= 'Rofi'",
+  "85:class_g = 'URxvt' && !focused",
+  "95:class_g = 'Zathura' && !focused",
+  "80:class_g *?= 'Rofi'",
 ];
 inactive-dim = 0.05;
 
-# I need a better graphic card to do this
-#blur: {
-#	method = "gaussian";
-#	size = 10;
-#	deviation = 5.0;
-#}
+
+blur: {
+	method = "gaussian";
+	size = 15;
+	deviation = 5.0;
+}
+
+blur-background-exclude = [
+  "class_g ~= 'gromit-mpx'",
+  "class_g ~= 'zoom'",
+];
+
 
 wintypes:
 {
