Updated editorconfig and gitconfig

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name  = Pablo Cárdenas
-	email = pablo-cardenas@outlook.com
+	email = pablo.cardenas@imca.edu.pe
 
 [diff]
 	tool = vimdiff
