--- a/home/.editorconfig
+++ b/home/.editorconfig
@@ -16,9 +16,13 @@ indent_style = tab
 tab_width = 4
 max_line_length = 79
 
-[*.{py,R}]
+[*.py]
 indent_style = space
 indent_size = 4
+
+[*.R]
+indent_style = space
+indent_size = 2
 
 [Makefile]
 indent_style = tab
