fix: Updated rifle.conf - added eog

--- a/linux/.config/ranger/rifle.conf
+++ b/linux/.config/ranger/rifle.conf
@@ -82,6 +82,7 @@ mime ^image/x-xcf, has gimp,             X, flag f = gimp -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 
 mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
+mime ^image, has eog,       X, flag f = eog -- "$@"
 mime ^image, has gimp,      X, flag f = gimp -- "$@"
 
 #-------------------------------------------
