Added fontforge to ranger/rifle.conf

--- a/linux/.config/ranger/rifle.conf
+++ b/linux/.config/ranger/rifle.conf
@@ -19,6 +19,7 @@ ext db, has sqlitebrowser, X, flag f = sqlitebrowser "$@"
 mime application/x-sqlite3, has sqlitebrowser, X, flag f = sqlitebrowser "$@"
 ext psc, has pseint, X, flag f = pseint "$@"
 mime application/x-hdf, has vitables, X, flag f = vitables "$@"
+mime application/vnd.font-fontforge-sfd, has fontforge, X, flag f = fontforge "$@"
 
 
 ext 1                         = man "$1"
