--- a/linux/.config/systemd/user/bugwarrior-pull.service
+++ b/linux/.config/systemd/user/bugwarrior-pull.service
@@ -2,7 +2,7 @@
 Description=bugwarrior-pull
 
 [Service]
-ExecStart=/usr/bin/sh -c "/home/pablo/.local/bin/bugwarrior-pull && task sync"
+ExecStart=/usr/bin/sh -c "task sync && /home/pablo/.local/bin/bugwarrior-pull && task sync"
 Type=oneshot
 
 [Install]
