--- a/linux/.config/picom/picom.conf
+++ b/linux/.config/picom/picom.conf
@@ -20,6 +20,7 @@ shadow-exclude = [
   "class_g = 'zoom' && name = 'as_toolbar'",
   "bounding_shaped && !rounded_corners",
   "name = 'cpt_frame_window'",
+  "class_g ~= '' && name ~= 'screenkey'",
 ];
 
 
@@ -34,6 +35,8 @@ inactive-opacity-override = false;
 opacity-rule = [
   "95:class_g = 'URxvt' && focused",
   "90:class_g = 'URxvt' && !focused",
+  "60:class_g ~= '' && name ~= 'screenkey'",
+  "60:class_g ~= '' && name ~= 'screenkey'",
   "95:class_g = 'Zathura' && !focused",
   "80:class_g *?= 'Rofi'",
 ];
@@ -49,6 +52,7 @@ blur: {
 blur-background-exclude = [
   "class_g ~= 'gromit-mpx'",
   "class_g ~= 'zoom'",
+  "class_g ~= '' && name ~= 'screenkey'",
 ];
 
 
